--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,20 +1,18 @@
 <div class="logo"></div>
 <ul nz-menu nzTheme="dark" nzMode="inline">
-    <li nz-submenu nzTitle="User" nzIcon="user">
+    <li nz-submenu nzTitle="Gestión de Valores" nzIcon="user">
         <ul>
-            <li nz-menu-item>Tom</li>
-            <li nz-menu-item>Bill</li>
-            <li nz-menu-item>Alexa</li>
+            <li nz-menu-item>Nuevo Proceso</li>
         </ul>
     </li>
-    <li nz-submenu nzTitle="Team" nzIcon="team">
+    <!-- <li nz-submenu nzTitle="Team" nzIcon="team">
         <ul>
             <li nz-menu-item>Team 1</li>
             <li nz-menu-item>Team 2</li>
         </ul>
-    </li>
-    <li nz-menu-item>
+    </li> -->
+    <!-- <li nz-menu-item>
         <i nz-icon nzType="file"></i>
         <span>File</span>
-    </li>
+    </li> -->
 </ul>
