--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -2,4 +2,11 @@
     height: 32px;
     background: rgba(255, 255, 255, 0.2);
     margin: 16px;
-  }
+}
+
+// ul {
+//     background: #59C3B7;
+// }
+// li {
+//     background: #59C3B7;
+// }
