--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <ul nz-menu nzTheme="dark" nzMode="inline">
     <li nz-submenu nzTitle="Gestión de Valores" nzIcon="user">
         <ul>
-            <li nz-menu-item>Nuevo Proceso</li>
+            <li routerLink="/proceso" nz-menu-item>Nuevo Proceso</li>
         </ul>
     </li>
     <!-- <li nz-submenu nzTitle="Team" nzIcon="team">
