--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,34 @@
 <div class="logo"></div>
 <ul nz-menu nzTheme="dark" nzMode="inline">
-    <li nz-submenu nzTitle="Gestión de Valores" nzIcon="user">
-        <ul>
-            <li routerLink="/proceso" nz-menu-item>Nuevo Proceso</li>
-        </ul>
+    <!-- <li nz-submenu nzTitle="Gestión de Valores" nzIcon="user"> -->
+    <li nz-menu-item routerLink="/proceso">
+        <!-- <i nz-icon nzType="user"></i> -->
+        <span>Generación Procesos Deuda</span>
     </li>
+    <li nz-menu-item>
+        <!-- <i nz-icon nzType="user"></i> -->
+        <span>Generación Lote</span>
+    </li>
+    <li nz-menu-item>
+        <!-- <i nz-icon nzType="user"></i> -->
+        <span>Proceso de Emisión</span>
+    </li>
+    <li nz-menu-item>
+        <!-- <i nz-icon nzType="user"></i> -->
+        <span>Gestión de Notificaciones</span>
+    </li>
+    <li nz-menu-item>
+        <!-- <i nz-icon nzType="user"></i> -->
+        <span>Proceso Envío Coactivo</span>
+    </li>
+    <li nz-menu-item>
+        <!-- <i nz-icon nzType="user"></i> -->
+        <span>Gestión de Deuda</span>
+    </li>
+    <!-- <ul>
+            <li routerLink="/proceso" nz-menu-item>Nuevo Proceso</li>
+        </ul> -->
+    <!-- </li> -->
     <!-- <li nz-submenu nzTitle="Team" nzIcon="team">
         <ul>
             <li nz-menu-item>Team 1</li>
