--- a/src/app/pages/listado-contrib/listado-contrib.component.html
+++ b/src/app/pages/listado-contrib/listado-contrib.component.html
@@ -1,35 +1,18 @@
-<h4 style="text-align: center;">LISTADO CONTRIBUYENTE PROCESO N° 0001 - PRINCIPALES - ORDEN DE PAGO</h4>
-<nz-table #basicTable [nzData]="listOfData">
+<h4 style="text-align: center;">LISTADO CONTRIBUYENTE PROCESO N° {{litNumProceso}} - {{litTituloA}} - {{litTituloB}}</h4>
+<nz-table #basicTable>
     <thead>
         <tr>
-            <th style="text-align: center;">Código<br>
-                <input id="txtcodigo" type="text" nz-input formControlName="note" />
-            </th>
-            <th style="text-align: center;">Nombre o Razon Social<br>
-                <input id="txtcodigo" type="text" nz-input formControlName="note" /></th>
-            <th style="text-align: center;">Monto<br>
-                <input id="txtcodigo" type="text" nz-input formControlName="note" />
-            </th>
-            <th [nzSelections]="listOfSelection" [(nzChecked)]="checked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
+            <th style="text-align:center;">Código</th>
+            <th style="text-align:center;">Nombre o Razón Social</th>
+            <th style="text-align:center;">Monto Deuda</th>
         </tr>
     </thead>
     <tbody>
-        <!-- <tr *ngFor="let data of basicTable.data">
-                <td>{{ data.name }}</td>
-                <td>{{ data.age }}</td>
-                <td>{{ data.address }}</td>
-                <td>{{ data.address }}</td>
-                <td>{{ data.address }}</td>
-                <td>{{ data.address }}</td>
-                <td>{{ data.address }}</td>
-                <td>{{ data.address }}</td>
-                <td>{{ data.address }}</td>
-                <td>
-                    <a>Action 一 {{ data.name }}</a>
-                    <nz-divider nzType="vertical"></nz-divider>
-                    <a>Delete</a>
-                </td>
-            </tr> -->
+        <tr *ngFor="let data of dataListadoAcumuladoFinal">
+            <td style="text-align:center;">{{ data.codcon }}</td>
+            <td style="text-align:center;">{{ data.razsoc }}</td>
+            <td style="text-align:center;">S/ {{ data.monsum | number: '1.2-2' }}</td>
+        </tr>
     </tbody>
 </nz-table>
 
