--- a/src/app/pages/obtencion-deuda/obtencion-deuda.component.html
+++ b/src/app/pages/obtencion-deuda/obtencion-deuda.component.html
@@ -67,16 +67,12 @@
             <td style="text-align:center;">{{ data.codcon }}</td>
             <td style="text-align:center;">{{ data.razsoc }}</td>
             <td style="text-align:center;">S/ {{ data.monsum | number: '1.2-2' }}</td>
-            <td
-            [nzChecked]="setOfCheckedId.has(data.id)"
-            [nzDisabled]="data.disabled"
-            (nzCheckedChange)="onItemChecked(data.id, $event)"
-          ></td>
+            <td [nzChecked]="setOfCheckedId.has(data.id)" [nzDisabled]="data.disabled" (nzCheckedChange)="onItemChecked(data.id, $event)"></td>
         </tr>
     </tbody>
 </nz-table>
 
-<button nz-button nzType="primary" [nzSize]="size" (click)="filtraInformacion()">
+<button id="btnProcesar" nz-button nzType="primary" [nzSize]="size" (click)="filtraInformacion()">
     Procesar
 </button>
 <button nz-button nzType="primary" [nzSize]="size">
