Lotes de emision

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         <!-- <i nz-icon nzType="user"></i> -->
         <span>Generación Procesos Deuda</span>
     </li>
-    <li nz-menu-item>
+    <li nz-menu-item routerLink="/lote">
         <!-- <i nz-icon nzType="user"></i> -->
         <span>Generación Lote</span>
     </li>
