--- a/src/app/pages/obtencion-deuda/obtencion-deuda.component.html
+++ b/src/app/pages/obtencion-deuda/obtencion-deuda.component.html
@@ -1,51 +1,74 @@
 <h4 style="text-align: center;">NUEVO PROCESO OBTENCIÓN DE DEUDA</h4>
 <nz-card style="width:100%;" nzTitle="Filtros de búsqueda">
     <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
-        <div nz-row [nzGutter]="16">
-            <div nz-col class="gutter-row" [nzSpan]="6">
+        <div nz-row [nzGutter]="24">
+            <div nz-col class="gutter-row" [nzSpan]="8">
                 <nz-form-item>
                     <nz-form-label>Tipo de Contribuyente</nz-form-label>
                     <nz-form-control>
                         <nz-select formControlName="tipoContri" name="select-validate" [(ngModel)]="filterTipoContrib">
-                            <nz-option nzValue="Principales" nzLabel="Principales"></nz-option>
+                            <nz-option *ngFor="let item of dataTipoContribuyente" [nzLabel]="item.descon" [nzValue]="item.tipcon"></nz-option>
+                            <!-- <nz-option nzValue="Principales" nzLabel="Principales"></nz-option>
                             <nz-option nzValue="Medianos" nzLabel="Medianos"></nz-option>
-                            <nz-option nzValue="Pequeños" nzLabel="Pequeños"></nz-option>
+                            <nz-option nzValue="Pequeños" nzLabel="Pequeños"></nz-option> -->
                         </nz-select>
                     </nz-form-control>
                 </nz-form-item>
             </div>
-            <div nz-col class="gutter-row" [nzSpan]="6">
+            <div nz-col class="gutter-row" [nzSpan]="8">
                 <nz-form-item>
                     <nz-form-label>Tipo de Valor</nz-form-label>
                     <nz-form-control>
                         <nz-select formControlName="tipoValor" name="select-validate" [(ngModel)]="filterTipoValor">
-                            <nz-option nzValue="1" nzLabel="Orden de Pago"></nz-option>
-                            <nz-option nzValue="3" nzLabel="Resolución de Det."></nz-option>
+                            <nz-option *ngFor="let item of dataTipoValor" [nzLabel]="item.tva_descri" [nzValue]="item.tva_id"></nz-option>
+                            <!-- <nz-option nzValue="1" nzLabel="Orden de Pago"></nz-option>
+                            <nz-option nzValue="3" nzLabel="Resolución de Det."></nz-option> -->
                         </nz-select>
                     </nz-form-control>
                 </nz-form-item>
             </div>
-            <div nz-col class="gutter-row" [nzSpan]="5">
+            <div nz-col class="gutter-row" [nzSpan]="8">
                 <nz-form-item>
-                    <nz-form-label nzRequired nzFor="email">Años a procesar &nbsp;</nz-form-label>
-                    <nz-form-control [nzSm]="6">
-                        <input id="note" type="text" nz-input formControlName="anioDesde" [(ngModel)]="filterAnioDesde" />
+                    <nz-form-label nzFor="email">Años a procesar &nbsp;</nz-form-label>
+                    <nz-form-control>
+                        <input id="note" style="width: 100%;" type="text" nz-input formControlName="anioDesde" [(ngModel)]="filterAnioDesde" />
                     </nz-form-control>
                     <label>&nbsp;-&nbsp;</label>
-                    <nz-form-control [nzSm]="6">
-                        <input id="note" type="text" nz-input formControlName="anioHasta" [(ngModel)]="filterAnioHasta" />
+                    <nz-form-control>
+                        <input id="note" style="width: 100%;" type="text" nz-input formControlName="anioHasta" [(ngModel)]="filterAnioHasta" />
                     </nz-form-control>
                 </nz-form-item>
             </div>
-            <div nz-col class="gutter-row" [nzSpan]="6">
+        </div>
+        <div nz-row [nzGutter]="24">
+            <div nz-col class="gutter-row" [nzSpan]="8">
                 <nz-form-item>
-                    <nz-form-label nzRequired nzFor="email">Rango montos &nbsp;</nz-form-label>
-                    <nz-form-control [nzSm]="6" nzErrorTip="The input is not valid E-mail!">
-                        <input id="note" type="text" nz-input formControlName="montoDesde" [(ngModel)]="filterMontoDesde" />
+                    <nz-form-label nzFor="email">Rango montos &nbsp;</nz-form-label>
+                    <nz-form-control nzErrorTip="The input is not valid E-mail!">
+                        <input id="note" style="width: 100%;" type="text" nz-input formControlName="montoDesde" [(ngModel)]="filterMontoDesde" />
                     </nz-form-control>
                     <label>&nbsp;-&nbsp;</label>
-                    <nz-form-control [nzSm]="6">
-                        <input id="note" type="text" nz-input formControlName="montoHasta" [(ngModel)]="filterMontoHasta" />
+                    <nz-form-control>
+                        <input id="note" style="width: 100%;" type="text" nz-input formControlName="montoHasta" [(ngModel)]="filterMontoHasta" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col class="gutter-row" [nzSpan]="8">
+                <nz-form-item>
+                    <nz-form-label>Ubicación</nz-form-label>
+                    <nz-form-control>
+                        <nz-select formControlName="ubicacion" name="select-validate" [(ngModel)]="filterUbicacion">
+                            <nz-option nzValue="0" nzLabel="TODOS"></nz-option>
+                            <nz-option *ngFor="let item of dataTipoUbicacion" [nzLabel]="item.desdfd" [nzValue]="item.dfdnid"></nz-option>
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col class="gutter-row" [nzSpan]="8">
+                <nz-form-item>
+                    <nz-form-label>Sector</nz-form-label>
+                    <nz-form-control>
+                        <input id="note" style="width: 40%;" type="text" nz-input formControlName="tipoSector" [(ngModel)]="filterSector" />
                     </nz-form-control>
                 </nz-form-item>
             </div>
@@ -53,7 +76,7 @@
 
     </form>
 </nz-card>
-<nz-table #basicTable [nzData]="listOfData">
+<!-- <nz-table #basicTable [nzData]="listOfData">
     <thead>
         <tr>
             <th style="text-align:center;">Código</th>
@@ -70,7 +93,7 @@
             <td [nzChecked]="setOfCheckedId.has(data.id)" [nzDisabled]="data.disabled" (nzCheckedChange)="onItemChecked(data.id, $event)"></td>
         </tr>
     </tbody>
-</nz-table>
+</nz-table> -->
 
 <button id="btnProcesar" nz-button nzType="primary" [nzSize]="size" (click)="filtraInformacion()">Procesar</button>
 <button nz-button nzType="primary" [nzSize]="size">Grabar Selección</button>
