--- a/src/app/pages/deuda-contrib/deuda-contrib.component.html
+++ b/src/app/pages/deuda-contrib/deuda-contrib.component.html
@@ -1,5 +1,5 @@
 <h4 style="text-align: center;">DEUDA CONTRIBUYENTE</h4>
-<nz-table #basicTable [nzData]="dataListado">
+<nz-table #basicTable [nzData]="dataListado" [nzSize]="'small'">
     <thead>
         <tr>
             <th style="text-align: center;">Cod. Contribuyente</th>
